# HeaterControl

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  compile.sh  execTests.sh  fix.cmake  prepare_env.sh
CMake/: Board.cmake  BuildType.cmake  Firmware_variants.cmake  Nrfjprog.cmake  Platform.cmake  Toolchain.cmake
CMake/board/: customBoard.cmake
CMake/platform/: nrf52840_xxAA.cmake
CMake/toolchain/: gcc.cmake  gccarmemb.cmake
cmake/: CMake_nRF5x.cmake  SoftDevice.cmake
cmake/toolchain/: gcc.cmake  gccarmemb.cmake
hardware/: HeaterControl-cache.lib  HeaterControl.kicad_pcb  HeaterControl.kicad_pcb-bak  HeaterControl.net  HeaterControl.sch  sym-lib-table
hardware/reciever/: Reciever-cache.lib  Reciever-rescue.lib  Reciever.kicad_pcb-bak  Reciever.net  Reciever.sch  fp-lib-table  sym-lib-table
hardware/roomSensor/: HeaterControl-cache.lib  HeaterControl-rescue.lib  HeaterControl.kicad_pcb  HeaterControl.kicad_pcb-bak  HeaterControl.net  HeaterControl.sch  fp-lib-table
hardware/roomSensor/Laird.pretty/: BL654.kicad_mod
hardware/universalSensor/: HeaterControl-cache.lib  HeaterControl-rescue.lib  HeaterControl.kicad_pcb  HeaterControl.kicad_pcb-bak  HeaterControl.net  HeaterControl.pro  HeaterControl.sch  HeaterControl.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
hardware/universalSensor/CR2032_BatHolder.pretty/: Cr2032-Holder.kicad_mod
hardware/universalSensor/LED_RGB.pretty/: LED_PACKAGE_1.6x1.5mm.kicad_mod
hardware/universal_v2/: Laird_schematic.sch  Laird_schematic.sch-bak  Universal_v2-cache.lib  Universal_v2.kicad_pcb  Universal_v2.kicad_pcb-bak  Universal_v2.net  Universal_v2.pro  Universal_v2.sch  Universal_v2.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
hardware/universal_v2/CR2032_BatHolder.pretty/: Cr2032-Holder.kicad_mod
hardware/universal_v2/Pads.pretty/: 3Pads.kicad_mod  6xPad.kicad_mod
hardware/universal_v3/: Universal_v3  Universal_v3-cache.lib  Universal_v3.kicad_pcb  Universal_v3.kicad_pcb-bak  Universal_v3.net  Universal_v3.pro  Universal_v3.sch  Universal_v3.sch-bak  fp-info-cache  fp-lib-table  minew.lib  sym-lib-table
hardware/universal_v3/Everlight.pretty/: Everlight_19-237_R6GHBHC-M07_2T.kicad_mod
hardware/universal_v3/Pads.pretty/: 5xPad.kicad_mod
hardware/universal_v3/minew.pretty/: MS88SF2.kicad_mod
include/: app_config.h  btle_adv.h  btle_transmiter.h  buttons.h  calendar.h  communication.h  decoded_time.h  dev_board.h  display.h  ds18b20.h  events_dispatcher.h  font_bridge.h  fonts.h  heating_model.h  i2c_bridge.h  icon_bridge.h  observable.h  one_wire.h  production_board.h  rgb_led.h  sensors.h  sht30.h  ssd1306.h  temperatureSheduler.h  timer_owner.h  universal_1_board.h  weekUnit.h  xbm_icons.h
include/bluetooth/: bluetooth_ctrl.h  bluetooth_mode_selector.h  btle_adv.h  btle_transmiter.h  custom_stack.h  gatt_advertiser.h  gatt_service.h  gatt_stack.h
include/bluetooth/characteristics/: battery_level_characteristic.h  charcteristic_traits.h  current_time_characteristic.h  device_name_characteristic.h  gatt_characteristic.h  humidity_characteristic.h  measurement_interval_characteristic.h  security_polices.h  temperature_characteristic.h
include/bluetooth/services/: battery_service.h  current_time_service.h  device_information_service.h  environmental_sensing_service.h  gatt_service.h  room_state_service.h
include/bluetooth/subcomponents/: btctrl_sub_comp.h  conn_params_subcomp.h  gap_subcomp.h  peer_mgr_subcomp.h  queued_writes_subcomp.h
include/bridges/: font_bridge.h  i2c_bridge.h  icon_bridge.h  one_wire.h
include/leds/: led_color.h  led_factory.h  rgb_led.h  rgb_led_emulation.h  rgb_led_none.h
include/resources/: fonts.h  xbm_icons.h
include/schedule/: temperatureScheduler.h  weekScheduleBuilder.h
include/screens/: default_screen.h  remote_config_screen.h  screen.h  screens_stack.h  status_screen.h  time_setup_screen.h
include/sensors/: battery_sensor.h  ds18b20.h  sensor_factory.h  sensors.h  sht30.h  unit.h
include/types/: general_id_type.h  hardware_pin.h  named_value_type.h  single_instance.h  unit.h
src/: battery_sensor.cpp  buttons.cpp  calendar.cpp  chewy_regular42.cpp  communication.cpp  ds18b20.c  error_handlers.cpp  events_dispatcher.cpp  fonts.cpp  glcdfont.c  i2c_bridge.cpp  main.cpp  rgb_led.cpp  screen_submodule.cpp  sensor_factory.cpp  ssd1306.cpp
src/variants/: main_universal_1.cpp  main_variant_1.cpp
test/: CMakeLists.txt  time_schedule_test.cpp
